Bug 494129 - Dolphin's File property dialog doesn't show the BTRFS file system
Summary: Dolphin's File property dialog doesn't show the BTRFS file system
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Properties dialog (other bugs)
Version First Reported In: 6.10.0
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Thomas Duckworth
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-04 18:04 UTC by José Rafael
Modified: 2025-01-29 06:01 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
print (125.43 KB, image/png)
2024-10-04 18:04 UTC, José Rafael
Details

Note You need to log in before you can comment on or make changes to this bug.
Description José Rafael 2024-10-04 18:04:05 UTC
Created attachment 174431 [details]
print

Dolphin's Info Panel doesn't show the BTRFS file system, but it does show other file systems normally.
Print attached

Terminal Dolphin:
➜  teste dolphin .
QGestureManager::deliverEvent: could not find the target for gesture
QGestureManager::deliverEvent: could not find the target for gesture
kf.kio.widgets: Could not find mount point for QUrl("file:///home/joserafael/teste")
qt.qpa.wayland: eglSwapBuffers failed with 0x300d, surface: 0x0



Operating System: Fedora Linux 40
KDE Plasma Version: 6.1.5
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2
Kernel Version: 6.10.11-200.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-4200U CPU @ 1.60GHz
Memory: 7.7 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 4400
Comment 1 Paul Worrall 2024-10-05 06:13:50 UTC
Partially confirmed: On my installation the free space is shown for a btrfs volume, but the file system type and mount information that is shown on an ext4 volume is not shown for a btrfs volume.

Operating System: Arch Linux 
KDE Plasma Version: 6.1.90
KDE Frameworks Version: 6.6.0
Qt Version: 6.8.0
Graphics Platform: Wayland
Comment 2 Thomas Duckworth 2025-01-11 06:46:19 UTC
Seems to be a problem with libmount and the way that btrfs subvolumes are bind mounts:
https://invent.kde.org/frameworks/kio/-/merge_requests/1778 worked around it by just using `lstat` for bind mounts
Comment 3 Thomas Duckworth 2025-01-29 06:01:16 UTC
Git commit 35e575eb7d457c6e972ca373e2c408c31e4a7358 by Thomas Duckworth.
Committed on 29/01/2025 at 05:11.
Pushed by tduck into branch 'master'.

kmountpoint: Handle device IDs for bind mounts

M  +9    -1    src/core/kmountpoint.cpp

https://invent.kde.org/frameworks/kio/-/commit/35e575eb7d457c6e972ca373e2c408c31e4a7358