kmountpoint: Handle device IDs for bind mounts

BUG: 494129