src/core/kmountpoint.cpp
@@ -359,7 +359,15 @@ KMountPoint::List KMountPoint::currentMountPoints(DetailsNeededFlags infoNeeded)
                 mp->d->m_mountPoint = QFile::decodeName(mnt_fs_get_target(fs));
                 mp->d->m_mountType = QFile::decodeName(mnt_fs_get_fstype(fs));
                 mp->d->m_isNetFs = mnt_fs_is_netfs(fs) == 1;
-                mp->d->m_deviceId = mnt_fs_get_devno(fs);
+
+                // handle bind mounts
+                if (mp->d->m_mountedFrom != mp->d->m_mountPoint) {
+                    if (QT_STATBUF buff; QT_LSTAT(mp->d->m_mountPoint.toLatin1().constData(), &buff) == 0) {
+                        mp->d->m_deviceId = buff.st_dev;
+                    }
+                } else {
+                    mp->d->m_deviceId = mnt_fs_get_devno(fs);
+                }
 
                 if (infoNeeded & NeedMountOptions) {
                     mp->d->m_mountOptions = QFile::decodeName(mnt_fs_get_options(fs)).split(QLatin1Char(','));
